@@ -1,3 +1,6 @@
+2011-06-06  6.7.0-5 Cristy  <quetzlzacatenango@image...>
+  * Set modulate() colorspace predicated on parameter (e.g. brightness is HSB).
+
 2011-01-25  6.6.7-3 Cristy  <quetzlzacatenango@image...>
   * Verify color parameter is a Perl array to avoid seg fault (reference
     http://www.imagemagick.org/discourse-server/viewtopic.php?f=7&t=17928).
